new makeorder func
